objects/ProjectObject__c.object
<CustomObject>
    <fields>
        <fullName>ReportFilterByOwner__c</fullName>
        <formula>IF( Project_Manager__c  = $User.Id ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportFilterByOwner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportFilterByProjectOwner__c</fullName>
        <formula>IF( Project_Manager__c  = $User.Id ,1, 0)</formula>
        <label>ReportFilterByProjectOwner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevenueOld__c</fullName>
        <description>Invoiced revenue (including charged expenses).</description>
        <inlineHelpText>Invoiced revenue (including charged expenses).</inlineHelpText>
        <label>Invoiced (without expenses)</label>
        <summarizedField>Project_Invoice__c.Total_Invoice_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Invoice__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Invoice__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RevenueSchedule_NetTotal__c</fullName>
        <formula>RevenueOld__c - Discount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Schedule Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_CPS__c</fullName>
        <formula>PS_Project_Number__r.Orderline_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Without_Expenses__c</fullName>
        <description>Revenue without Expenses</description>
        <formula>RevenueOld__c -  Total_Invoiced_Expenses__c</formula>
        <inlineHelpText>Invoiced without expenses</inlineHelpText>
        <label>Invoiced (without expenses)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Signed MIlestone&apos;s revenue</description>
        <inlineHelpText>Total of signed milestones associated with project</inlineHelpText>
        <label>Recognised Revenue</label>
        <summarizedField>Milestone__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Milestone__c.Is_Signed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SD_C_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SD&amp;C Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_BU_Code__c</fullName>
        <formula>TEXT( Sales_BU_Project_Number__r.LBU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales BU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_BU_Project_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales BU Project Number</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Schedule Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Moves__c</fullName>
        <label>Schedule Moves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Required__c</fullName>
        <formula>IF(INCLUDES(Functional_Area__c, &quot;PS Consulting&quot;), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Schedule Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_versus_actual_hours__c</fullName>
        <formula>IF(Current_Scoped_Days_Effort__c=0,0,Total_Actual_Time__c/Current_Scoped_Days_Effort__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope versus actual days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scope_versus_booked_hours__c</fullName>
        <formula>(Total_Booked_Hours__c/Scoped_Hours_Effort__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope versus booked days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scoped_CPS_days_Formula__c</fullName>
        <formula>if(RecordType.DeveloperName= &apos;Project&apos;, Order_Line_Number__r.Scoped_CPS_days__c,if(RecordType.DeveloperName= &apos;CPS_Project&apos;,  PS_Project_Number__r.Order_Line_Number__r.Scoped_CPS_days__c  ,null))</formula>
        <label>Scoped CPS days (source: OAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_CPS_days_RollUp__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPS Scoped days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_CPS_days__c</fullName>
        <label>Scoped CPS days (source: PM/PC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_Hours_Effort__c</fullName>
        <label>Original Scoped Days Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_LPS_days_Formula__c</fullName>
        <formula>Order_Line_Number__r.Scoped_LPS_days__c</formula>
        <label>Scoped LPS days (source: OAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_LPS_days_RollUp__c</fullName>
        <label>LPS Scoped days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_LPS_days__c</fullName>
        <label>Scoped LPS days (source: PM/PC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Mail_To_Mgr_and_Coord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Mail To Mgr and Coord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SequenceNo__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>SequenceNo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Billing_Frequency__c</fullName>
        <description>To display the service billing frequency value from contract on the project</description>
        <formula>TEXT(Order_Header_Number__r.Service_billing_frequency__c)</formula>
        <label>Service Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_SoW__c</fullName>
        <label>Signed SoW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spec_Docs_Mock_ups_Comms_Docs__c</fullName>
        <label>Spec Docs/Mock-ups/Comms Docs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sun_Order_Number__c</fullName>
        <label>Sun Order Number</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Language__c</fullName>
        <label>Survey Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Recipient_Email__c</fullName>
        <description>This field is being used for Qualtrics (SSE-10716)</description>
        <label>Survey Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Recipient_Name__c</fullName>
        <description>This field is being used for Qualtrics (SSE-10716)</description>
        <label>Survey Recipient Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_sent_date__c</fullName>
        <label>Survey Last Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TC_Transition_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TC Transition Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Work_Costs_Absorbed__c</fullName>
        <label>TC Work Costs Absorbed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Margin__c</fullName>
        <inlineHelpText>Enter as a %</inlineHelpText>
        <label>Target Margin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Technology_Lead_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Technology_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsRGfv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology_Lead__c</fullName>
        <label>Technology Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Porter</fullName>
                </value>
                <value>
                    <fullName>Agam Bhardwaj</fullName>
                </value>
                <value>
                    <fullName>Agris Fridvalds</fullName>
                </value>
                <value>
                    <fullName>Aimee Goldschmidt</fullName>
                </value>
                <value>
                    <fullName>Amandeepti</fullName>
                </value>
                <value>
                    <fullName>Anirudh Vashishtha</fullName>
                </value>
                <value>
                    <fullName>Anshul Mishra</fullName>
                </value>
                <value>
                    <fullName>Arden Fox</fullName>
                </value>
                <value>
                    <fullName>Arshpreet Dhingra</fullName>
                </value>
                <value>
                    <fullName>Ashley Caskey</fullName>
                </value>
                <value>
                    <fullName>Conor Comerford</fullName>
                </value>
                <value>
                    <fullName>Dan Lund</fullName>
                </value>
                <value>
                    <fullName>David Egerton-Smith</fullName>
                </value>
                <value>
                    <fullName>Dragan Dragas</fullName>
                </value>
                <value>
                    <fullName>Edward Ford</fullName>
                </value>
                <value>
                    <fullName>Gavin Grover</fullName>
                </value>
                <value>
                    <fullName>Gemma Townsend</fullName>
                </value>
                <value>
                    <fullName>George Tsiatsis</fullName>
                </value>
                <value>
                    <fullName>Hernan De Armas</fullName>
                </value>
                <value>
                    <fullName>Jason Pilbrow</fullName>
                </value>
                <value>
                    <fullName>Jayant Yadav</fullName>
                </value>
                <value>
                    <fullName>John Daniel</fullName>
                </value>
                <value>
                    <fullName>John Duncan</fullName>
                </value>
                <value>
                    <fullName>John Webb</fullName>
                </value>
                <value>
                    <fullName>Jolene Meyer</fullName>
                </value>
                <value>
                    <fullName>Julia Partridge</fullName>
                </value>
                <value>
                    <fullName>Kim Havelund</fullName>
                </value>
                <value>
                    <fullName>Leanna Myers</fullName>
                </value>
                <value>
                    <fullName>Louis Lu</fullName>
                </value>
                <value>
                    <fullName>Marcus Lewis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Solutions_Deliverable__c</fullName>
        <label>Technology Solutions Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Configured Customer System</fullName>
                </value>
                <value>
                    <fullName>New Standard Customer System</fullName>
                </value>
                <value>
                    <fullName>Platform/Content Maintenance</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Consultancy</fullName>
                </value>
                <value>
                    <fullName>Updated Configured Customer System</fullName>
                </value>
                <value>
                    <fullName>Update Standard Customer System</fullName>
                </value>
                <value>
                    <fullName>Systems Training</fullName>
                </value>
                <value>
                    <fullName>Data extract</fullName>
                </value>
                <value>
                    <fullName>Post-live support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technology Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Spent_CPS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Spent (CPS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAttribution__c</fullName>
        <description>Total Attribution Value</description>
        <inlineHelpText>Value incurred from Attribution Value= Day* Rate</inlineHelpText>
        <label>Total Attribution</label>
        <summarizedField>RevenueAttribution__c.Attribution_Value__c</summarizedField>
        <summaryForeignKey>RevenueAttribution__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalTimeSpent__c</fullName>
        <formula>Total_Time_Spent__c  +  Time_Spent_CPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTime_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Internal costs. Recorded timesheet hours (all users, task categories and tasks recorded on the project) against a standard hourly cost. Hourly costs are set in the SF user-profile of each user.</inlineHelpText>
        <label>Time Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Time__c</fullName>
        <label>Total Actual Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Associate_Costs__c</fullName>
        <description>The number of associate days against the associate cost per day excluding expenses where cost type = “Associate Consultant” OR “volunteer”</description>
        <inlineHelpText>The number of associate days against the associate cost per day excluding expenses where cost type = “Associate Consultant” OR “volunteer”</inlineHelpText>
        <label>Total Associate Costs</label>
        <summarizedField>Associate__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>Associate__c.Associate_Type__c</field>
            <operation>equals</operation>
            <value>Associate Consultant, Volunteer</value>
        </summaryFilterItems>
        <summaryForeignKey>Associate__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Attributions_Day__c</fullName>
        <description>This field is created to calculate total attribution days on project(for non-scoped attribution) and is referred in email template.</description>
        <label>Total Attributions Day</label>
        <summarizedField>RevenueAttribution__c.Attribution_Days__c</summarizedField>
        <summaryFilterItems>
            <field>RevenueAttribution__c.Scoped__c</field>
            <operation>equals</operation>
            <value>Non-scoped</value>
        </summaryFilterItems>
        <summaryForeignKey>RevenueAttribution__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Time__c</fullName>
        <label>Total Billable Time</label>
        <summarizedField>Timesheet_Line__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Line__c.Billable1__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Booked_Hours__c</fullName>
        <label>Total Booked Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CPS_Cost_Estimate__c</fullName>
        <formula>Scoped_Hours_Effort__c  *  CPS_Per_Hour_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CPS Cost Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Chargeable_Expenses__c</fullName>
        <description>To add Associate Chargeable Expenses and Expenses which are chargeable.</description>
        <formula>Chargeable_Expenses__c  +  Associate_Chargeable_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Chargeable expenses plus associate chargeable expenses</inlineHelpText>
        <label>Total Chargeable Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses_Outstanding__c</fullName>
        <formula>Chargeable_Expenses__c -  Total_Invoiced_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>All non invoiced expenses, both chargeable and non chargeable</inlineHelpText>
        <label>Total Expenses Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <description>Chargeable and non-chargeable expenses recorded on the project. This includes expenses recorded in the “expense” and  “associate and other cost” section.</description>
        <formula>Expenses__c +   Associate_and_Other_Cost_Expenses__c</formula>
        <inlineHelpText>Chargeable and non-chargeable expenses recorded on the project. This includes expenses recorded in the “expense” and  “associate and other cost” section.</inlineHelpText>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Expenses__c</fullName>
        <inlineHelpText>Invoiced Expenses for Submitted invoices</inlineHelpText>
        <label>Total Invoiced Expenses</label>
        <summarizedField>Project_Invoice__c.Total_Expense_Recharge__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Invoice__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Invoice__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_LBU_Costs__c</fullName>
        <description>The number of LBU days against the LBU cost per day excluding expenses where cost type = “LBU”</description>
        <inlineHelpText>The number of LBU days against the LBU cost per day excluding expenses where cost type = “LBU”</inlineHelpText>
        <label>Total LBU Costs</label>
        <summarizedField>Associate__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>Associate__c.Associate_Type__c</field>
            <operation>equals</operation>
            <value>LBU</value>
        </summaryFilterItems>
        <summaryForeignKey>Associate__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Non_Billable_Time__c</fullName>
        <label>Total Non Billable Time</label>
        <summarizedField>Timesheet_Line__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Timesheet_Line__c.Billable1__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Timesheet_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Orderline_Value_RollUp__c</fullName>
        <label>Total Order Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Orderline_Value__c</fullName>
        <formula>Order_Line_Number__r.Running_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Orderline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Costs__c</fullName>
        <description>Other cost  excluding expenses where costs type &lt;&gt; “LBU” OR “Associate Consultant” OR “volunteer”</description>
        <inlineHelpText>Other cost  excluding expenses where costs type &lt;&gt; “LBU” OR “Associate Consultant” OR “volunteer”</inlineHelpText>
        <label>Total Other Costs</label>
        <summarizedField>Associate__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>Associate__c.Associate_Type__c</field>
            <operation>notEqual</operation>
            <value>Associate Consultant, LBU, Volunteer</value>
        </summaryFilterItems>
        <summaryForeignKey>Associate__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time_Cost__c</fullName>
        <description>Internal  costs. Recorded timesheet hours (all users, task categories and tasks recorded on the project) against a standard hourly cost. Hourly costs are set in the SF user-profile of each user.</description>
        <inlineHelpText>Internal  costs. Recorded timesheet hours (all users, task categories and tasks recorded on the project) against a standard hourly cost. Hourly costs are set in the SF user-profile of each user.</inlineHelpText>
        <label>Time Cost (Legacy)</label>
        <summarizedField>Timesheet_Line__c.Time_Cost__c</summarizedField>
        <summaryForeignKey>Timesheet_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time_Outstanding__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billable time not yet invoiced.</inlineHelpText>
        <label>Total Time Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <label>Time Spent</label>
        <summarizedField>Timesheet_Line__c.Hours__c</summarizedField>
        <summaryForeignKey>Timesheet_Line__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Track_for_Delivery_Target_Variance__c</fullName>
        <label>Track for Delivery Target Variance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track_for_Reason__c</fullName>
        <label>Track for Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Project_Deliverable__c</fullName>
        <label>Training Project Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>A&amp;DC</fullName>
                </value>
                <value>
                    <fullName>COMPD</fullName>
                </value>
                <value>
                    <fullName>Assessor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Expected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unrecognized_Revenue__c</fullName>
        <label>Unrecognised Revenue</label>
        <summarizedField>Milestone__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Milestone__c.Is_Signed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Updated_Close_Date_On__c</fullName>
        <label>Updated Close Date On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Waived_Fees__c</fullName>
        <label>Waived Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>additional_scoped_comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AMS_Projects_List</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>LBU__c</columns>
        <columns>Project_Nick_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Total_Orderline_Value_RollUp__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBU__c</field>
            <operation>equals</operation>
            <value>CA1,US5</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProjectObject__c.Project</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>PS Project Manager</value>
        </filters>
        <label>AMS Projects List</label>
    </listViews>
    <listViews>
        <fullName>ANZ_Projects_List</fullName>
        <columns>NAME</columns>
        <columns>LBU__c</columns>
        <columns>Project_Nick_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Owner_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Total_Orderline_Value_RollUp__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBU__c</field>
            <operation>equals</operation>
            <value>AU1,NZ1</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProjectObject__c.Project</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>PS Project Manager</value>
        </filters>
        <label>ANZ Projects List</label>
    </listViews>
    <listViews>
        <fullName>AU_Projects_Finishing_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBU__c</field>
            <operation>equals</operation>
            <value>AU1</value>
        </filters>
        <filters>
            <field>Project_End_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>~AU Projects Finishing This Week</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpen_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CPS_Flag__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Chargeable_Expenses__c</columns>
        <columns>LBU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <label>All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_My_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Nick_Name__c</columns>
        <columns>Unrecognized_Revenue__c</columns>
        <columns>Milestone_Status_Reports__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Milestones_Value__c</columns>
        <columns>Orderline_Value__c</columns>
        <columns>RevenueOld__c</columns>
        <columns>TotalTimeSpent__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <label>All My Open Projects</label>
    </listViews>
</CustomObject>